--- a/a02-group.tex
+++ b/a02-group.tex
@@ -43,7 +43,7 @@ $ $
 \subsection{Examples}
 \label{subsec:group-ex}
 
-$\mathbb{Z}$ (i.e., a set of all integers) is an abelian group under addition ($+$), because:
+$\mathbb{Z}$ (i.e., the set of all integers) is an abelian group under addition ($+$), because:
 \begin{itemize}
 \item \textbf{Closed:} For any integer $a, b \in \mathbb{Z}$, $a + b = c$ is also an integer ($\in \mathbb{Z}$).
 \item \textbf{Associative:} For any integer $a, b, c \in \mathbb{Z}$, $(a + b) + c = a + (b + c)$.
@@ -63,7 +63,7 @@ $ $
 \end{itemize}
 $ $
 
-\noindent $\mathbb{R}$ (i.e., a set of all real numbers) is an abelian group under multiplication ($\cdot$), because: 
+\noindent $\mathbb{R}$ (i.e., the set of all real numbers) is an abelian group under multiplication ($\cdot$), because: 
 \begin{itemize}
 \item \textbf{Closed:} For any real number $a, b \in \mathbb{R}$, $a \cdot b = c$ is also a real number ($\in \mathbb{R}$).
 \item \textbf{Associative:} For any real number $a, b, c \in \mathbb{R}$, $(a \cdot b) \cdot c = a \cdot (b \cdot c)$.
