--- a/a03-field.tex
+++ b/a03-field.tex
@@ -17,11 +17,11 @@ $ $
 \subsection{Examples}
 \label{subsec:field-ex}
 
-$\mathbb{Z}$ (a set of all integers) is a ring, but not a field, because not all of its elements have a multiplicative inverse (as shown in \autoref{subsec:group-ex}). 
+$\mathbb{Z}$ (the set of all integers) is a ring, but not a field, because not all of its elements have a multiplicative inverse (as shown in \autoref{subsec:group-ex}). 
 
 $ $
 
-\noindent $\mathbb{R}$ (a set of all real numbers) is a field. As shown in \autoref{subsec:group-ex}, it is an abelian group over the $(+)$ and $(\cdot)$ operators, and its elements are distributive over the $(+, \cdot)$ operators.
+\noindent $\mathbb{R}$ (the set of all real numbers) is a field. As shown in \autoref{subsec:group-ex}, it is an abelian group over the $(+)$ and $(\cdot)$ operators, and its elements are distributive over the $(+, \cdot)$ operators.
 
 
 $ $
@@ -45,6 +45,3 @@ $ $
 \item \textbf{Isomorphic Fields:} Any two finite fields, $\mathbb{F}_1$ and $\mathbb{F}_2$ with the same number of elements are isomorphic (i.e., there exists a bi-jective one-to-one mapping function $f : \mathbb{F}_1 \rightarrow \mathbb{F}_2$ and the algebraic operations $(+, \cdot)$ preserve correctness among newly mapped elements). In other words, there exists a mapping function $f : \mathbb{F}_1 \rightarrow \mathbb{F}_2$ comprised of the field operators ($+$, $\cdot$). For such an isomorphic function $f$, for any $a, b \in \mathbb{F}_1$, $f(a+b) = f(a) + f(b)$ and $f(a \cdot b) = f(a) \cdot f(b)$
 \end{enumerate}
 \end{tcolorbox}
-
-
-
