--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -10,7 +10,7 @@
 \textbf{A polynomial ring} is a set of polynomials where polynomial computations over the $(+, \cdot)$ operators (e.g., $f_1 + f_2$, $f_1 \cdot (f_2 - f_3)$, $f_1 + f_2 + f_4$) are closed, associative, commutative, and distributive. 
 
 
-A polynomial ring ${\mathbb{Z}_q[x] / (x^n + 1)}$ is a set of all polynomials $f_i$ that have the following properties:
+A polynomial ring ${\mathbb{Z}_q[x] / (x^n + 1)}$ is the set of all polynomials $f_i$ that have the following properties:
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:poly-ring-overview}} Ring}}]
 
@@ -95,7 +95,7 @@ $ $
 \textbf{{Set Elements}} & number & polynomial \\
 \hline
 \textbf{{Ring Notation}} & $\mathbb{Z}_p = \{0, 1, \gap{$\cdots$}, p - 1\}$  & $\mathbb{Z}_p[x] / (x^n + 1)$ \\
-\textbf{{\& Definition}} & A set of all integers between $0$ and $p$ & A set of all polynomials $f$ such that\\
+\textbf{{\& Definition}} & The set of all integers between $0$ and $p$ & The set of all polynomials $f$ such that\\
 && $f= c_0 + c_1x^1 + c_2x^2 \cdots + c_{n-1}x^{n-1}$ \\
 && where each coefficient $c_i \in \mathbb{Z}_p$ \\
 && and $f$'s degree is less than $n$ \\
