Updates from Overleaf

--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -86,7 +86,8 @@ $ $
 
 \begin{table}[h]
 \centering
-\noindent\adjustbox{max width=\columnwidth}{
+\footnotesize
+%\noindent\adjustbox{max width=\columnwidth}{
 \begin{tabular}{|c||c|c|} % left align
 \hline
 &\textbf{Integer Ring} & \textbf {Polynomial Ring} \\
@@ -126,7 +127,7 @@ $ $
 && $d_a = d_b$ and $a_i \equiv b_i$ in modulo $p$\\
 &&for all $0 \leq i \leq d_a$\\ 
 \hline
-\end{tabular}}
+\end{tabular}%}
 \centering
 \caption{Comparison between a number ring and a polynomial ring.
 }
