Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -470,18 +470,28 @@ This chapter explains the basic mathematical components of the Number theory: gr
 \renewcommand{\thesection}{B-\arabic{section}}
 \setcounter{section}{0}
 
-This chapter explains lattice-base cryptographic schemes: LWE cryptosystem, RLWE cryptosystem, GLWE cryptosystem, GLev cryptosystem, and GGSW cryptosystem. These are the essential building blocks for FHE schemes. 
+This chapter explains lattice-based cryptographic schemes: LWE cryptosystem, RLWE cryptosystem, GLWE cryptosystem, GLev cryptosystem, and GGSW cryptosystem. These are the essential building blocks for FHE schemes. 
 
 
 $ $
 
-\noindent \textbf{\underline{Required Background}}
+\begin{tcolorbox}[
+    title = \textbf{Required Background},    % box title
+    colback = white,    % light background; tweak to taste
+    colframe = black,  % frame colour
+    boxrule = 0.8pt,     % line thickness
+    left = 1mm, right = 1mm, top = 1mm, bottom = 1mm % inner padding
+]
+
+
 
 \begin{itemize}
 \item \autoref{sec:group}: \nameref{sec:group}
 \item \autoref{sec:field}: \nameref{sec:field}
 \item \autoref{sec:polynomial-ring}: \nameref{sec:polynomial-ring}
 \end{itemize}
+
+\end{tcolorbox}
 
 $ $
 
