Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -291,7 +291,7 @@ $ $
 %$ $
 
 This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on a \href{https://fhetextbook.github.io} {\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
-Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. 
+Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. This book is an evolving open project, and we welcome FHE experts to join us as official collaborators to help perfect the draft.
 
 
 
@@ -356,7 +356,7 @@ Special thanks are extended to Robin Geelen (KU Leuven) for his thoughtful and d
 \renewcommand{\thesection}{A-\arabic{section}}
 \setcounter{section}{0}
 
-This chapter explains the basic mathematical components of the Number theory: group, field, order, roots of unity, cyclotomic polynomial, polynomial ring, and decomposition. These are essential building blocks for post-quantum cryptography.
+This chapter explains the basic mathematical components of number theory: group, field, order, roots of unity, cyclotomic polynomial, polynomial ring, and decomposition. These are essential building blocks for post-quantum cryptography.
 
 \clearpage
 
