--- a/d03-ckks.tex
+++ b/d03-ckks.tex
@@ -1328,7 +1328,11 @@ $= \bm{(}M((\omega)^{2n-1}), M(\omega^{2n-3}), \cdots, M((\omega^{1}), M((\overl
 
 $= \bm{(}M((\omega)^{-1}), M((\omega^{3})^{-1}), \cdots, M((\omega^{n-1})^{-1}), M((\overline{\omega^{n-1}})^{-1}), \cdots, M((\overline{\omega^{3}})^{-1}), M((\overline{\omega})^{-1})\bm{)}$
 
-$=\{M(X^{-1})\}$ where $X = \{\omega, \omega^{3}, \cdots, \omega^{2n - 1}, \overline{\omega^{2n - 1}}, \cdots, \overline{\omega^3}, \overline{\omega} \} = \{\omega^{1}, \omega^{3}, \cdots, \omega^{2n - 1}\}$
+$=\{M(X^{-1})\}$ 
+
+$ $
+
+, where $X = \{\omega, \omega^{3}, \cdots, \omega^{2n - 1}, \overline{\omega^{2n - 1}}, \cdots, \overline{\omega^3}, \overline{\omega} \} = \{\omega^{1}, \omega^{3}, \cdots, \omega^{2n - 1}\}$
 
 $ $
 
