Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -291,7 +291,7 @@ $ $
 %$ $
 
 This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on a \href{https://fhetextbook.github.io} {\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
-Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. This book is an evolving open project, and we welcome FHE experts to join us as official collaborators to help perfect the draft.
+Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. As this book is an open project, we welcome FHE experts to join us as collaborators and help expand the draft.
 
 
 
