Updates from Overleaf

--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -207,11 +207,11 @@ $ $
 
 The polynomial ring $\mathbb{Z}_8 / (x^4 + 1)$ has the following 4  congruence relationships: 
 
-$\mathbf{x^4 \equiv -1}$
+{\boldmath{$x^4 \equiv -1$}}
 
 $x^4 \cdot x^{-1} \equiv -1 \cdot x^{-1}$
 
-$\mathbf{x^3 \equiv -x^{-1}}$
+{\boldmath{$x^3 \equiv -x^{-1}$}}
 
 $ $
 
@@ -219,7 +219,7 @@ $x^4 \equiv -1$
 
 $x^4 \cdot x^{-3} \equiv -1 \cdot x^{-3}$
 
-$\mathbf{x \equiv -x^{-3}}$
+{\boldmath{$x \equiv -x^{-3}$}}
 
 $ $
 
@@ -227,7 +227,7 @@ $x^4 \equiv -1$
 
 $x^4 \cdot x^{-2} \equiv -1 \cdot x^{-2}$
 
-$\mathbf{x^2 \equiv -x^{-2}}$
+{\boldmath{$x^2 \equiv -x^{-2}$}}
 
 $ $
 
